<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/miniPlayer"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:fitsSystemWindows="true"
    android:background="@drawable/nav_bar_background_blur">

    <ImageView
        android:id="@+id/ivAlbumArt"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/album_art"
        android:src="@drawable/ic_album_art"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/songInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivAlbumArt"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSongTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_song_title"
            android:textColor="@color/text_icons"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDevicesAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="@string/devices_available"
            android:textColor="@color/subtle_text_inactive_icons"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_devices_available" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivHeart"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/add_to_favorites"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivPlayPause"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/subtle_text_inactive_icons" />

    <ImageView
        android:id="@+id/ivPlayPause"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/play_pause"
        android:src="@drawable/ic_play_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_icons" />

</androidx.constraintlayout.widget.ConstraintLayout>
