<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:padding="16dp">

    <!-- Top Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="Equalizer"
            android:textColor="@color/equalizer_text_dark"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Equalizer Sliders with dB scale -->
    <LinearLayout
        android:id="@+id/equalizerSlidersContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">

        <!-- dB Labels -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+15 dB"
                android:textSize="14sp"
                android:textColor="@color/equalizer_text_dark"
                android:layout_marginBottom="8dp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-15 dB"
                android:textSize="14sp"
                android:textColor="@color/equalizer_text_dark"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <!-- 5 Equalizer Bands -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekBarBand1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:rotation="270"
                android:max="30"
                android:progress="15"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60Hz"
                android:textSize="12sp"
                android:textColor="@color/equalizer_text_dark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekBarBand2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:rotation="270"
                android:max="30"
                android:progress="15"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="230Hz"
                android:textSize="12sp"
                android:textColor="@color/equalizer_text_dark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekBarBand3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:rotation="270"
                android:max="30"
                android:progress="15"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="910Hz"
                android:textSize="12sp"
                android:textColor="@color/equalizer_text_dark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekBarBand4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:rotation="270"
                android:max="30"
                android:progress="15"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3.6kHz"
                android:textSize="12sp"
                android:textColor="@color/equalizer_text_dark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekBarBand5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:rotation="270"
                android:max="30"
                android:progress="15"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="14kHz"
                android:textSize="12sp"
                android:textColor="@color/equalizer_text_dark"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Preset Buttons -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:alignmentMode="alignMargins"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/btnPresetBalanced"
            style="@style/EqualizerPresetButton"
            android:text="@string/equalizer_preset_balanced" />

        <Button
            android:id="@+id/btnPresetBassBoost"
            style="@style/EqualizerPresetButton"
            android:text="@string/equalizer_preset_bass_boost" />

        <Button
            android:id="@+id/btnPresetSmooth"
            style="@style/EqualizerPresetButton"
            android:text="@string/equalizer_preset_smooth" />

        <Button
            android:id="@+id/btnPresetDynamic"
            style="@style/EqualizerPresetButton"
            android:text="@string/equalizer_preset_dynamic" />

        <Button
            android:id="@+id/btnPresetClear"
            style="@style/EqualizerPresetButton"
            android:text="@string/equalizer_preset_clear" />

        <Button
            android:id="@+id/btnPresetTrebleBoost"
            style="@style/EqualizerPresetButton"
            android:text="@string/equalizer_preset_treble_boost" />

        <Button
            android:id="@+id/btnPresetCustom"
            style="@style/EqualizerPresetButton.Highlight"
            android:text="@string/equalizer_preset_custom" />
    </GridLayout>

    <TextView
        android:id="@+id/footerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Set the sound just how you like it."
        android:textAlignment="center"
        android:textColor="@color/equalizer_text_dark"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

</LinearLayout>
