<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blur_overlay" />

    <TextView
        android:id="@+id/tvMotive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="Motives"
        android:textColor="@color/text_icons"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="Category"
        android:textColor="@color/subtle_text_inactive_icons"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMotive" />

    <GridLayout
        android:id="@+id/categoryGrid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/nav_bar_background_blur"
        android:columnCount="4"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory">

        <Button
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="188dp"
            android:layout_rowSpan="2"
            android:layout_columnWeight="1"
            android:background="@drawable/button_category_selected"
            android:text="Pop"
            android:textAllCaps="false"
            android:textColor="@color/text_icons"
            app:cornerRadius="12dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_columnWeight="1"
            android:text="Rock"
            android:background="@drawable/button_category_normal"
            android:textColor="@color/text_icons"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="12dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_columnWeight="1"
            android:text="Epic"
            android:background="@drawable/button_category_normal"
            android:textColor="@color/text_icons"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="12dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_columnWeight="1"
            android:text="Lo-fi"
            android:background="@drawable/button_category_normal"
            android:textColor="@color/text_icons"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="12dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_columnWeight="2"
            android:layout_columnSpan="2"
            android:text="Symphonic"
            android:background="@drawable/button_category_normal"
            android:textColor="@color/text_icons"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="12dp" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_arrow_down"
            android:background="@drawable/button_category_normal"
            app:tint="@color/text_icons"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="12dp"
            android:contentDescription="@string/more_categories" />

    </GridLayout>

    <LinearLayout
        android:id="@+id/leftNavBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/nav_bar_background_blur"
        android:orientation="vertical"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/miniPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryGrid">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/home"
            android:src="@drawable/ic_home_active"
            app:tint="@color/accent_1_interactive_elements" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/album"
            android:src="@drawable/ic_album_inactive"
            app:tint="@color/subtle_text_inactive_icons" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search_inactive"
            app:tint="@color/subtle_text_inactive_icons" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings_inactive"
            app:tint="@color/subtle_text_inactive_icons" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSongs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/nav_bar_background_blur"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/miniPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leftNavBar"
        app:layout_constraintTop_toBottomOf="@+id/categoryGrid"
        tools:listitem="@layout/item_song" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/miniPlayer"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/nav_bar_background_blur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivAlbumArt"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/album_art"
            android:src="@drawable/ic_album_art"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/songInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivAlbumArt"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvSongTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prisioner"
                android:textColor="@color/text_icons"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDevicesAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_devices_available"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="Devices Available"
                android:textColor="@color/subtle_text_inactive_icons"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivHeart"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/add_to_favorites"
            android:src="@drawable/ic_heart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivPlayPause"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/subtle_text_inactive_icons"/>

        <ImageView
            android:id="@+id/ivPlayPause"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/play_pause"
            android:src="@drawable/ic_play_pause"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/text_icons" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>